--- a/Assignments/Week_Two_Assignments/index.html
+++ b/Assignments/Week_Two_Assignments/index.html
@@ -4,7 +4,22 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <link rel="stylesheet" href="style.css" />
     <title>Flex-box and Positioning</title>
   </head>
-  <body></body>
+  <body>
+    <header>
+      <h1>Week Two Assignments</h1>
+      <div class="link">
+        <a href="style.css">Card Component</a>
+        <a href="">Chips Component</a>
+        <a href="">Drawer Component</a>
+        <a href="">Header component</a>
+        <a href="">Badge component</a>
+        <a href="">snackbar component</a>
+        <a href="">different styles of dialogs</a>
+        <a href="">different styles of tabs</a>
+      </div>
+    </header>
+  </body>
 </html>
