--- a/Assignments/Week_Two_Assignments/card/card.html
+++ b/Assignments/Week_Two_Assignments/card/card.html
@@ -18,17 +18,25 @@
 
     <div class="container">
       <!-- CONTAINER ITEM 1 -->
-      <div class="card1">
-        <h3 class="heading__card1">Basic</h3>
-        <div class="main_card1">
-          <div class="card__img1"></div>
+      <div class="card__common card1">
+        <h2 class="heading__card1">Basic</h2>
+        <div class="main_card main_card1">
+          <div class="card__img1">
+            <img
+              src="/card/img/tim-swaan-eOpewngf68w-unsplash.jpg"
+              alt="nature"
+              class="card--img card__img01"
+            />
+          </div>
           <div class="topic__author1">
-            <h4 class="topic__author-big1">Our Changing Planet</h4>
-            <h5 class="topic__author-small1">by Kurt Wagner</h5>
+            <h3 class="topic__author-big1">Our Changing Planet</h3>
+            <h4 class="topic__author-small1">by Kurt Wagner</h4>
           </div>
           <div class="image__description1">
-            Visit ten places on our planet that are undergoing the biggest
-            changes today.
+            <span
+              >Visit ten places on our planet that are undergoing the biggest
+              changes today.</span
+            >
           </div>
           <div class="card__action1">
             <a href="#"><span>READ</span></a>
@@ -43,17 +51,25 @@
       </div>
 
       <!-- CONTAINER ITEM 2 -->
-      <div class="card2">
-        <h3 class="heading__card2">Basic w/ Text over Media</h3>
-        <div class="main_card2">
-          <div class="card__img2"></div>
+      <div class="card__common card2">
+        <h2 class="heading__card2">Basic w/ Text over Media</h2>
+        <div class="main_card main_card2">
+          <div class="card__img2">
+            <img
+              src="/card/img/tim-swaan-eOpewngf68w-unsplash.jpg"
+              alt="nature"
+              class="card--img card__img01"
+            />
+          </div>
           <div class="topic__author2">
-            <h4 class="topic__author-big2">Our Changing Planet</h4>
-            <h5 class="topic__author-small2">by Kurt Wagner</h5>
+            <h3 class="topic__author-big2">Our Changing Planet</h3>
+            <h4 class="topic__author-small2">by Kurt Wagner</h4>
           </div>
           <div class="image__description2">
-            Visit ten places on our planet that are undergoing the biggest
-            changes today.
+            <span
+              >Visit ten places on our planet that are undergoing the biggest
+              changes today.</span
+            >
           </div>
           <div class="card__action2">
             <a href="#"><span>READ</span></a>
@@ -68,17 +84,25 @@
       </div>
 
       <!-- CONTAINER ITEM 3 -->
-      <div class="card3">
-        <h3 class="heading__card3">Basic w/ Header</h3>
-        <div class="main_card3">
-          <div class="card__img3"></div>
+      <div class="card__common card3">
+        <h2 class="heading__card3">Basic w/ Header</h2>
+        <div class="main_card main_card3">
+          <div class="card__img3">
+            <img
+              src="/card/img/tim-swaan-eOpewngf68w-unsplash.jpg"
+              alt="nature"
+              class="card--img card__img01"
+            />
+          </div>
           <div class="topic__author3">
-            <h4 class="topic__author-big3">Our Changing Planet</h4>
-            <h5 class="topic__author-small3">by Kurt Wagner</h5>
+            <h3 class="topic__author-big3">Our Changing Planet</h3>
+            <h4 class="topic__author-small3">by Kurt Wagner</h4>
           </div>
           <div class="image__description3">
-            Visit ten places on our planet that are undergoing the biggest
-            changes today.
+            <span
+              >Visit ten places on our planet that are undergoing the biggest
+              changes today.</span
+            >
           </div>
           <div class="card__action3">
             <a href="#"><span>READ</span></a>
@@ -93,17 +117,25 @@
       </div>
 
       <!-- CONTAINER ITEM 4 -->
-      <div class="card4">
-        <h3 class="heading__card4">Basic w/ Only Buttons</h3>
-        <div class="main_card4">
-          <div class="card__img4"></div>
+      <div class="card__common card4">
+        <h2 class="heading__card4">Basic w/ Only Buttons</h2>
+        <div class="main_card main_card4">
+          <div class="card__img4">
+            <img
+              src="/card/img/tim-swaan-eOpewngf68w-unsplash.jpg"
+              alt="nature"
+              class="card--img card__img01"
+            />
+          </div>
           <div class="topic__author4">
-            <h4 class="topic__author-big4">Our Changing Planet</h4>
-            <h5 class="topic__author-small4">by Kurt Wagner</h5>
+            <h3 class="topic__author-big4">Our Changing Planet</h3>
+            <h4 class="topic__author-small4">by Kurt Wagner</h4>
           </div>
           <div class="image__description4">
-            Visit ten places on our planet that are undergoing the biggest
-            changes today.
+            <span
+              >Visit ten places on our planet that are undergoing the biggest
+              changes today.</span
+            >
           </div>
           <div class="card__action4">
             <a href="#"><span>READ</span></a>
@@ -118,17 +150,25 @@
       </div>
 
       <!-- CONTAINER ITEM 5 -->
-      <div class="card5">
-        <h3 class="heading__card5">Basic w/ Only Icons</h3>
-        <div class="main_card5">
-          <div class="card__img5"></div>
+      <div class="card__common card5">
+        <h2 class="heading__card5">Basic w/ Only Icons</h2>
+        <div class="main_card main_card5">
+          <div class="card__img5">
+            <img
+              src="/card/img/tim-swaan-eOpewngf68w-unsplash.jpg"
+              alt="nature"
+              class="card--img card__img01"
+            />
+          </div>
           <div class="topic__author5">
-            <h4 class="topic__author-big5">Our Changing Planet</h4>
-            <h5 class="topic__author-small5">by Kurt Wagner</h5>
+            <h3 class="topic__author-big5">Our Changing Planet</h3>
+            <h4 class="topic__author-small5">by Kurt Wagner</h4>
           </div>
           <div class="image__description5">
-            Visit ten places on our planet that are undergoing the biggest
-            changes today.
+            <span
+              >Visit ten places on our planet that are undergoing the biggest
+              changes today.</span
+            >
           </div>
           <div class="card__action5">
             <a href="#"><span>READ</span></a>
@@ -143,17 +183,25 @@
       </div>
 
       <!-- CONTAINER ITEM 6 -->
-      <div class="card6">
-        <h3 class="heading__card6">Horizontal Image and Text</h3>
-        <div class="main_card6">
-          <div class="card__img6"></div>
+      <div class="card__common card6">
+        <h2 class="heading__card6">Horizontal Image and Text</h2>
+        <div class="main_card main_card6">
+          <div class="card__img6">
+            <img
+              src="/card/img/tim-swaan-eOpewngf68w-unsplash.jpg"
+              alt="nature"
+              class="card--img card__img01"
+            />
+          </div>
           <div class="topic__author6">
-            <h4 class="topic__author-big6">Our Changing Planet</h4>
-            <h5 class="topic__author-small6">by Kurt Wagner</h5>
+            <h3 class="topic__author-big6">Our Changing Planet</h3>
+            <h4 class="topic__author-small6">by Kurt Wagner</h4>
           </div>
           <div class="image__description6">
-            Visit ten places on our planet that are undergoing the biggest
-            changes today.
+            <span
+              >Visit ten places on our planet that are undergoing the biggest
+              changes today.</span
+            >
           </div>
           <div class="card__action6">
             <a href="#"><span>READ</span></a>
