--- a/Assignments/Week_Two_Assignments/card/card.html
+++ b/Assignments/Week_Two_Assignments/card/card.html
@@ -63,7 +63,7 @@
             <img
               src="/card/img/tim-swaan-eOpewngf68w-unsplash.jpg"
               alt="nature"
-              class="card--img card__img01"
+              class="card--img card__img02"
             />
           </div>
           <div class="common__space">
@@ -78,7 +78,7 @@
               >
             </div>
             <div class="bottom_style bottom_style2">
-              <div class="display_inline card__action1">
+              <div class="display_inline card__action2">
                 <a href="#">Read</a>
                 <a href="#">Bookmark</a>
                 <i class="far fa-heart"></i>
@@ -94,17 +94,21 @@
       <div class="card__common card3">
         <h1 class="heading__card3">Basic w/ Header</h1>
         <div class="main_card main_card3">
+          <div class="heading-card3">
+            <h2 class="topic__author-big3">Our Changing Planet</h2>
+            <h3 class="topic__author-small3">by Kurt Wagner</h3>
+          </div>
           <div class="card__img3">
             <img
               src="/card/img/tim-swaan-eOpewngf68w-unsplash.jpg"
               alt="nature"
-              class="card--img card__img01"
+              class="card--img card__img03"
             />
           </div>
           <div class="common__space">
             <div class="topic__author3">
-              <h2 class="topic__author-big3">Our Changing Planet</h2>
-              <h3 class="topic__author-small3">by Kurt Wagner</h3>
+              <!-- <h2 class="topic__author-big3">Our Changing Planet</h2>
+              <h3 class="topic__author-small3">by Kurt Wagner</h3> -->
             </div>
             <div class="image__description image__description3">
               <span
@@ -113,7 +117,7 @@
               >
             </div>
             <div class="bottom_style bottom_style3">
-              <div class="display_inline card__action1">
+              <div class="display_inline card__action3">
                 <a href="#">Read</a>
                 <a href="#">Bookmark</a>
                 <i class="far fa-heart"></i>
@@ -133,7 +137,7 @@
             <img
               src="/card/img/tim-swaan-eOpewngf68w-unsplash.jpg"
               alt="nature"
-              class="card--img card__img01"
+              class="card--img card__img04"
             />
           </div>
           <div class="common__space">
@@ -148,12 +152,12 @@
               >
             </div>
             <div class="bottom_style bottom_style4">
-              <div class="display_inline card__action1">
+              <div class="display_inline card__action4">
                 <a href="#">Read</a>
                 <a href="#">Bookmark</a>
-                <i class="far fa-heart"></i>
+                <!-- <i class="far fa-heart"></i>
                 <i class="fas fa-share-alt"></i>
-                <i class="fas fa-ellipsis-v"></i>
+                <i class="fas fa-ellipsis-v"></i> -->
               </div>
             </div>
           </div>
@@ -168,7 +172,7 @@
             <img
               src="/card/img/tim-swaan-eOpewngf68w-unsplash.jpg"
               alt="nature"
-              class="card--img card__img01"
+              class="card--img card__img05"
             />
           </div>
           <div class="common__space">
@@ -183,9 +187,9 @@
               >
             </div>
             <div class="bottom_style bottom_style5">
-              <div class="display_inline card__action1">
-                <a href="#">Read</a>
-                <a href="#">Bookmark</a>
+              <div class="card__action5">
+                <!-- <a href="#">Read</a>
+                <a href="#">Bookmark</a> -->
                 <i class="far fa-heart"></i>
                 <i class="fas fa-share-alt"></i>
                 <i class="fas fa-ellipsis-v"></i>
@@ -203,22 +207,22 @@
             <img
               src="/card/img/tim-swaan-eOpewngf68w-unsplash.jpg"
               alt="nature"
-              class="card--img card__img01"
+              class="card--img card__img06"
             />
           </div>
-          <div class="common__space">
+          <div class="common__space common__space6">
             <div class="topic__author6">
               <h2 class="topic__author-big6">Our Changing Planet</h2>
               <h3 class="topic__author-small6">by Kurt Wagner</h3>
             </div>
-            <div class="image__description image__description6">
+            <!-- <div class="image__description image__description6">
               <span
                 >Visit ten places on our planet that are undergoing the biggest
                 changes today.</span
               >
-            </div>
+            </div> -->
             <div class="bottom_style bottom_style6">
-              <div class="display_inline card__action1">
+              <div class="display_inline card__action6">
                 <a href="#">Read</a>
                 <a href="#">Bookmark</a>
                 <i class="far fa-heart"></i>
