--- a/Assignments/Week_Two_Assignments/card/card.html
+++ b/Assignments/Week_Two_Assignments/card/card.html
@@ -235,5 +235,11 @@
       </div>
     </div>
     <!-- CONTAINER  END-->
+
+    <!-- best seller  -->
+    <!-- <div class="box"></div> -->
+
+    <div class="box bestseller"></div>
+    <!-- best seller -->
   </body>
 </html>
